--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^24.0.0",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
+    "prisma": "^6.9.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0"
